--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure App Service
 on:
   push: 
     branches: 
-      - app-service-deployment
+      - main
 
 jobs: 
   build-and-deploy:
@@ -20,7 +20,7 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: integrationninjas
+          app-name: AP
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .       
 
