--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ CLIENT_ID=b4a2a829-d4ce-49b9-9341-22995e0476ba
 CLIENT_SECRET=your-client-secret
 TENANT_ID=3b644da5-0210-4e60-b8dc-0beec1614542
 PORT=3000
-REDIRECT_URI=https://ap-dfe2cvfsdafwewaw.canadacentral-01.azurewebsites.net/auth/openid/return
+REDIRECT_URI=https://ap-dfe2cvfsdafwewaw.canadacentral-01.azurewebsites.net/auth/callback
 SESSION_SECRET=some-random-session-secret
