--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jsonwebtoken": "^9.0.2",
         "jwks-rsa": "^3.1.0",
         "passport": "^0.7.0",
-        "passport-azure-ad": "^4.3.5"
+        "passport-azure-ad": "^4.3.5",
+        "qs": "^6.13.1"
     }
 }
