--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "graph-service": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.1",
     "openid-client": "^6.1.6",
     "session": "^0.1.0"
   }
